--- a/credits.html
+++ b/credits.html
@@ -29,6 +29,7 @@
 <p><strong>Wrapper Offline - Benson</strong></p>
 <p><strong>Wrapper Online - 2Epik4u</strong></p>
 <p><strong>MJ the spirit - Developer of Wrapper: Online + Backs up wrapper online videos </strong></p>
+<p><strong> JC Video - Helper of Developing Wrapper </strong></p>
 <p><strong>GoTube/Blukas - Made Mega Comedy World 2.0 + Logo designer</strong></p>
 <p><strong>Assets - Vyond</strong></p>
 <p><strong>GoAnimateWrapper - VisualPlugin</strong></p>
